--- a/web/src/styles/pages/landing.css
+++ b/web/src/styles/pages/landing.css
@@ -1,82 +1,95 @@
-#page-landing{
+#page-landing {
     weight: 100vw;
     height: 100vh;
     background: linear-gradient(329.54deg, #29B6D1 0%, #00C7C7 100%);
-
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#page-landing .content-wrapper{
-
+#page-landing .content-wrapper {
     position: relative;
     width: 100%;
     max-width: 1100px;
-
-    height:100%;
+    height: 100%;
     max-height: 680px;
-
     display: flex;
     align-items: flex-start;
     flex-direction: column;
     justify-content: space-between;
-
     background: url(../../images/landing.svg) no-repeat 80% center;
     /* Eixo x e y depois do no-repeat */
 }
 
-#page-landing .content-wrapper main{
-    max-width:350px;
+#page-landing .content-wrapper main {
+    max-width: 350px;
 }
 
-#page-landing .content-wrapper main h1{
-    font-size:76px;
+#page-landing .content-wrapper main h1 {
+    font-size: 76px;
     font-weight: 900;
     line-height: 70px;
 }
 
-#page-landing .content-wrapper main p{
-    margin-top:40px;
+#page-landing .content-wrapper main p {
+    margin-top: 40px;
     font-size: 24px;
     line-height: 34px;
 }
 
-.content-wrapper .location{
+.content-wrapper .location {
     position: absolute;
-    right: 0;
-    top:0;
-
-    font-size:24px;
+    right: 60%;
+    top: 2%;
+    font-size: 24px;
     line-height: 34px;
-
     display: flex;
     flex-direction: column;
-
-    text-align: right;
+    text-align: left;
 }
 
-.content-wrapper .location strong{
+.content-wrapper .location strong {
     font-weight: 800;
 }
 
-.content-wrapper .enter-app{
+.content-wrapper .button-access {
     position: absolute;
     right: 0;
-    bottom:0;
+    top: 0;
+    text-decoration: none;
+    background: #12D4E0;
+    border-radius: 20px;
+    width: 222px;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 1.2rem;
+    font-family: Nunito, sans-serif;
+    transition: background-color 0.25s;
+    transition: color 0.2s;
+}
 
+.content-wrapper .button-access:hover {
+    background: #96FEFF;
+    color:#15C3D6;
+}
+
+.content-wrapper .enter-app {
+    position: absolute;
+    right: 0;
+    bottom: 0;
     width: 80px;
     height: 80px;
-
-    background:#ffd666;
+    background: #ffd666;
     border-radius: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
-
     transition: background-color 0.2s;
 }
 
-.content-wrapper .enter-app:hover{
-    background:#96feff;
+.content-wrapper .enter-app:hover {
+    background: #96feff;
 }
