--- a/web/src/styles/pages/login.css
+++ b/web/src/styles/pages/login.css
@@ -14,14 +14,45 @@
     height: 100%;
     max-height: 680px;
     display: flex;
-    align-items: flex-end;
-    flex-direction: column;
+    align-items: flex-start;
+    flex-direction: row;
     justify-content: space-between;
 }
 
-.content-wrapper .local-form{
-    background:#fff;
-    width:30%;
+.content-wrapper .local-form {
+    background: #fff;
+    width: 36.11%;
     height: 100%;
     display: flex;
+}
+
+.content-wrapper .presentation-container {
+    background: linear-gradient(329.54deg, #29B6D1 0%, #00C7C7 100%);
+    width: 63.89%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.content-wrapper .presentation-container img {
+    width: 260px;
+    height: 234px;
+}
+
+.content-wrapper .location {
+    position: absolute;
+    bottom:13%;
+    font-size: 24px;
+    line-height: 34px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-self: center;
+}
+
+
+.content-wrapper .location strong {
+    font-weight: 800;
 }
