--- a/web/src/styles/pages/login.css
+++ b/web/src/styles/pages/login.css
@@ -1,14 +1,14 @@
 #login {
     weight: 100vw;
     height: 100vh;
-    background: linear-gradient(329.54deg, #29B6D1 0%, #00C7C7 100%);
+    /* background: linear-gradient(329.54deg, #29B6D1 0%, #00C7C7 100%); */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 #login .content-wrapper {
-    position: relative;
+    /* position: relative; */
     width: 100%;
     max-width: 1100px;
     height: 100%;
@@ -19,11 +19,89 @@
     justify-content: space-between;
 }
 
-.content-wrapper .local-form {
+#login .local-form {
     background: #fff;
     width: 36.11%;
     height: 100%;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#login form {
+    width: 80%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#login h2, placeholder {
+    color: #5C8599;
+}
+
+#login label, a {
+    color: #8FA7B2;
+    font-size: 0.89rem;
+    text-decoration: none;
+}
+
+#login form button {
+    widows: 360px;
+    height: 64px;
+    border-radius: 20px;
+    color: #fff;
+    background: #37C77F;
+}
+
+#login .check-style+label {
+    display: block;
+    margin: 0em;
+    cursor: pointer;
+    padding: 0.1em;
+}
+
+#login .check-style {
+    display: none;
+}
+
+#login .check-style+label:before {
+    content: "\2714";
+    border: 0.13em solid #D3E2E5;
+    background:#D3E2E5;
+    border-radius: 4px;
+    display: inline-block;
+    width: .8em;
+    height: .8em;
+    padding-left: 0.15em;
+    padding-bottom: 0.25em;
+    margin-right: 0.15em;
+    vertical-align: bottom;
+    color: transparent;
+    transition: .3s;
+}
+
+#login .check-style+label:active:before {
+    transform: scale(0);
+}
+
+#login .check-style:checked+label:before {
+    background-color: #37C77F;
+    border-color: #37C77F;
+    color: #fff;
+}
+
+
+#login .checkbox-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#login .checkbox-label>label {
+    /* margin-left: 15px; */
 }
 
 .content-wrapper .presentation-container {
@@ -37,22 +115,37 @@
 }
 
 .content-wrapper .presentation-container img {
-    width: 260px;
-    height: 234px;
+    width: 30%;
+    height: 30%;
 }
 
-.content-wrapper .location {
-    position: absolute;
-    bottom:13%;
+.content-wrapper .text-location {
     font-size: 24px;
     line-height: 34px;
     display: flex;
     flex-direction: column;
-    text-align: left;
-    align-self: center;
+    text-align: center;
+    margin-top: 100px;
 }
-
 
 .content-wrapper .location strong {
     font-weight: 800;
+}
+
+#login .back-root {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #EBF2F5;
+    border-radius: 20px;
+    width: 48px;
+    height: 48px;
+    align-self: flex-end;
+    margin-right: 5%;
+    margin-top: 5%;
+    transition: background-color 0.2s;
+}
+
+#login .back-root:hover {
+    background-color: #d2d2d2;
 }
