--- a/web/src/styles/pages/login.css
+++ b/web/src/styles/pages/login.css
@@ -44,15 +44,26 @@
 #login label, a {
     color: #8FA7B2;
     font-size: 0.89rem;
+    line-height: 24px;
     text-decoration: none;
+    display: flex;
 }
 
-#login form button {
-    widows: 360px;
-    height: 64px;
+
+#login .input-block input{
+    width: 100%;
+    height: 52px;
+    background: #F5F8FA;
+    font-size: 0.89rem;
+    border: 1px solid #D3E2E5;
     border-radius: 20px;
-    color: #fff;
-    background: #37C77F;
+    outline: none;
+    color: #5C8599;
+    padding: 15px;
+}
+
+#login .input-block input:focus{
+    border-color: #A1E9C5;
 }
 
 #login .check-style+label {
@@ -69,7 +80,7 @@
 #login .check-style+label:before {
     content: "\2714";
     border: 0.13em solid #D3E2E5;
-    background:#D3E2E5;
+    background: #D3E2E5;
     border-radius: 4px;
     display: inline-block;
     width: .8em;
@@ -92,7 +103,6 @@
     color: #fff;
 }
 
-
 #login .checkbox-content {
     display: flex;
     flex-direction: row;
@@ -100,9 +110,6 @@
     align-items: center;
 }
 
-#login .checkbox-label>label {
-    /* margin-left: 15px; */
-}
 
 .content-wrapper .presentation-container {
     background: linear-gradient(329.54deg, #29B6D1 0%, #00C7C7 100%);
@@ -148,4 +155,8 @@
 
 #login .back-root:hover {
     background-color: #d2d2d2;
+}
+
+.container-btn button {
+    margin-top: 16px;
 }
